# usblukskey

./: CMakeLists.txt  FAQ  Makefile  README.md
doc/: crypttab  settings.example  usblukskey.hook
src/: CMakeLists.txt  main.cpp  settings.cpp  settings.hpp
